add 9 divs, for grid lay out, add data-value for JS functions later, also restart button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <title>X O Tik-Tak-Toe</title>
 </head>
 <body>
+    <div id="game">
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+        <div class="grid" data-value=""></div>
+    </div>
+    <div class="game-over">
+        <span class="go-txt"></span>
+        <button class="restart">Restart</button>
+    </div>
     
-
     <script src="assets/js/script.js"></script>
 </body>
 </html>
