--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css"/>
 
-    <title>X O Tik-Tak-Toe</title>
+    <title>❌ ⭕ Tik-Tak-Toe</title>
 </head>
 <body>
     <div id="game">
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
-        <div class="grid" data-value=""></div>
+        <div class="grid" data-value="0"></div>
+        <div class="grid" data-value="1"></div>
+        <div class="grid" data-value="2"></div>
+        <div class="grid" data-value="3"></div>
+        <div class="grid" data-value="4"></div>
+        <div class="grid" data-value="5"></div>
+        <div class="grid" data-value="6"></div>
+        <div class="grid" data-value="7"></div>
+        <div class="grid" data-value="8"></div>
     </div>
     <div class="game-over">
         <span class="go-txt"></span>
