add game over styling and text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="grid" data-value="5"></div>
         <div class="grid" data-value="6"></div>
         <div class="grid" data-value="7"></div>
-        <div class="grid" data-value="8"></div>
+        <div class="grid x" data-value="8"></div>
     </div>
     <div class="game-over">
         <span class="go-txt"></span>
