add @media queries for various screen sizes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>❌ ⭕ Tik-Tak-Toe</title>
 </head>
 <body>
+    <h1>Tik-Tak-Toe</h1>
+    
     <div id="game">
         <div class="grid" data-value="0"></div>
         <div class="grid" data-value="1"></div>
@@ -25,6 +27,7 @@
         <button class="restart">Restart</button>
     </div>
     
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
